--- a/build.properties
+++ b/build.properties
@@ -1,3 +1,5 @@
+username=admin
+password=cvhsrobotics
 # Project specific information
 package=org.usfirst.frc.team5243.robot
 robot.class=${package}.Robot
