Working drive code, fixed circular subsystem initialization calls by creating commandInitializer methods, com.ctre error fixed by directly placing .so files onto roboRIO filesystem using Filezilla

--- a/build.xml
+++ b/build.xml
@@ -24,7 +24,7 @@
   <property file="${user.home}/wpilib/wpilib.properties"/>
   <property file="build.properties"/>
   <property file="${user.home}/wpilib/java/${version}/ant/build.properties"/>
-  
+  <property name="team-number" value = "5243"/>
   <import file="${wpilib.ant.dir}/build.xml"/>
 
 </project> 
